--- a/CHANGES
+++ b/CHANGES
@@ -75,6 +75,8 @@
 	- revert to presentation ordering Yet Again (#62158).
 	- non-glibc: on upgrade, mergesort is much faster than quicksort.
 	- fix: generate config file md5 as ascii, not binary (#62542).
+	- fix: queries that evaluated to "" incorrectly returned NULL.
+	- fix: packages produced by rpm-4.0 dinna merge signature tags.
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
